Updated docker image to save to db

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x155516a17580>]"
+       "[<matplotlib.lines.Line2D at 0x1555169bfc10>]"
       ]
      },
      "execution_count": 2,
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "all_galaxies = pd.read_csv(data_dir+\"dr9_160_2_6deg.dat.txt\")\n",
+    "all_galaxies = pd.read_csv(data_dir+\"dr9_160_2_6deg.dat\")\n",
     "plt.plot(all_galaxies.ra, all_galaxies.dec, '.', ms=1)"
    ]
   },
@@ -137,38 +137,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "fff6a75e-a593-4790-a2fb-5606326ce22d",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>tbl_id</th>\n",
+       "      <th>tbl_name</th>\n",
+       "      <th>ls_id</th>\n",
+       "      <th>created</th>\n",
+       "      <th>stage</th>\n",
+       "      <th>tag</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621743042266</td>\n",
+       "      <td>2023-03-07 22:20:19.058976</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621271050433</td>\n",
+       "      <td>2023-03-07 22:20:19.077879</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621648077981</td>\n",
+       "      <td>2023-03-07 22:20:19.083887</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621929816416</td>\n",
+       "      <td>2023-03-07 22:20:19.091293</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621647291909</td>\n",
+       "      <td>2023-03-07 22:20:19.096316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>9996</td>\n",
+       "      <td>9996</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906622309140574</td>\n",
+       "      <td>2023-03-07 22:21:44.205694</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>9997</td>\n",
+       "      <td>9997</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621460125395</td>\n",
+       "      <td>2023-03-07 22:21:44.211451</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>9998</td>\n",
+       "      <td>9998</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906623439438358</td>\n",
+       "      <td>2023-03-07 22:21:44.219393</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>9999</td>\n",
+       "      <td>9999</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906622213654027</td>\n",
+       "      <td>2023-03-07 22:21:44.225291</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906620704886771</td>\n",
+       "      <td>2023-03-07 22:21:44.232564</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1, 1, 'cosmos_160', 9906620138523199, datetime.datetime(2023, 3, 4, 0, 13, 16, 599006), 1, 'run2')"
+       "         id  tbl_id    tbl_name             ls_id                    created  \\\n",
+       "0         1       1  cosmos_160  9906621743042266 2023-03-07 22:20:19.058976   \n",
+       "1         2       2  cosmos_160  9906621271050433 2023-03-07 22:20:19.077879   \n",
+       "2         3       3  cosmos_160  9906621648077981 2023-03-07 22:20:19.083887   \n",
+       "3         4       4  cosmos_160  9906621929816416 2023-03-07 22:20:19.091293   \n",
+       "4         5       5  cosmos_160  9906621647291909 2023-03-07 22:20:19.096316   \n",
+       "...     ...     ...         ...               ...                        ...   \n",
+       "9995   9996    9996  cosmos_160  9906622309140574 2023-03-07 22:21:44.205694   \n",
+       "9996   9997    9997  cosmos_160  9906621460125395 2023-03-07 22:21:44.211451   \n",
+       "9997   9998    9998  cosmos_160  9906623439438358 2023-03-07 22:21:44.219393   \n",
+       "9998   9999    9999  cosmos_160  9906622213654027 2023-03-07 22:21:44.225291   \n",
+       "9999  10000   10000  cosmos_160  9906620704886771 2023-03-07 22:21:44.232564   \n",
+       "\n",
+       "      stage   tag  \n",
+       "0         1  run2  \n",
+       "1         1  run2  \n",
+       "2         1  run2  \n",
+       "3         1  run2  \n",
+       "4         1  run2  \n",
+       "...     ...   ...  \n",
+       "9995      1  run2  \n",
+       "9996      1  run2  \n",
+       "9997      1  run2  \n",
+       "9998      1  run2  \n",
+       "9999      1  run2  \n",
+       "\n",
+       "[10000 rows x 7 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn.execute(\"SELECT * from bookkeeping\").first()"
+    "pd.DataFrame(conn.execute(\"SELECT * from bookkeeping\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "7a00d31b-4918-4dae-88af-3cee963c7a67",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9906620138523199, 161.359081536234, -3.61537897705767, 'REX', 24.5272, 23.950127, 26.303099, nan, nan, 0.154568, 0.262996, 0.030113, -2.415954, -1.585608, 5.126769, 5.626246, 0.26396, -4.243859, -1.267464, 1459.7465, 553.70496, 85.47421, 3.136003, 0.645353, 53.576904, 55.63601, 55.546356, 55.80115, 0.0, 1.023466, 0.821119, 0.966824, 0.630448, 0.882539, 1.0, 0.0, 1.396666, 1.173516, 1.312278, 0.361837, 0.0, 0.0, 80.73173, 0.0, 0.0, 0.776393, 0.586986, -99.0, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)"
+       "(9906621743042266, 162.910029571106, 0.81542817820044, 'REX', 23.42378, 22.469233, 21.555038, 20.804296, 21.673061, 0.427059, 1.028744, 2.387727, 4.767399, 2.141782, 14.504388, 22.860104, 25.552435, 8.278383, 1.702473, 1527.4186, 596.59454, 127.30318, 3.064141, 0.638112, 1297.0767, 1389.1155, 1384.5988, 1395.198, 0.0, 0.982051, 0.876592, 1.034885, 0.561166, 0.506167, 1.0, 0.0, 1.39972, 1.306459, 1.392947, 0.364783, 0.0, 0.0, 1755.2955, 0.0, 0.0, 0.698765, 0.079279, -99.0, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, None, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "0447823b-159f-47c4-9187-a22c632024ca",
    "metadata": {},
    "outputs": [],
@@ -188,9 +358,236 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19a08348-c19b-443c-ac60-3df4bfa49500",
+   "metadata": {},
+   "source": [
+    "### Running classify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "aca3368f-221b-4492-bdf6-aeede3261e20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:228: RuntimeWarning: scipy._lib.messagestream.MessageStream size changed, may indicate binary incompatibility. Expected 56 from C header, got 64 from PyObject\n"
+     ]
+    }
+   ],
+   "source": [
+    "from docker import classify\n",
+    "import util\n",
+    "import sqlalchemy\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4ac72d9f-97d5-4fcf-992c-c824080a8991",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Stage is wrong for galaxy 9906621743042266",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bkdata, tbldata \u001b[38;5;241m=\u001b[39m \u001b[43mclassify\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_galaxy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mls_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m9906621743042266\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m gal_data \u001b[38;5;241m=\u001b[39m tbldata\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m/global/cscratch1/sd/eramey16/galactic_lenses/docker/classify.py:131\u001b[0m, in \u001b[0;36mget_galaxy\u001b[0;34m(ls_id, tag, engine)\u001b[0m\n\u001b[1;32m    129\u001b[0m gal_meta \u001b[38;5;241m=\u001b[39m bkdata\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    130\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m gal_meta\u001b[38;5;241m.\u001b[39mstage \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 131\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStage is wrong for galaxy \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mls_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    133\u001b[0m tbldata \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[1;32m    134\u001b[0m     conn\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSELECT * FROM \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgal_meta\u001b[38;5;241m.\u001b[39mtbl_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m WHERE id=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgal_meta\u001b[38;5;241m.\u001b[39mtbl_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m    136\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mValueError\u001b[0m: Stage is wrong for galaxy 9906621743042266"
+     ]
+    }
+   ],
+   "source": [
+    "bkdata, tbldata = classify.get_galaxy(ls_id=9906621743042266)\n",
+    "gal_data = tbldata.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1cd11fbd-f14b-4523-8c63-887f1c3a00d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tbldata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c430653d-5f92-417f-845b-eeb592515658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.698765"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gal_data.z_phot_median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bdc01e74-0a86-4746-bc66-6cc9c59815a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23.42378, 22.469233, 21.555038, 20.804296, 21.673061]\n"
+     ]
+    }
+   ],
+   "source": [
+    "bands = ['g', 'r', 'z', 'w1', 'w2']\n",
+    "\n",
+    "print([gal_data[f'dered_mag_{b}'] for b in bands])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0567364d-3a42-46d6-9a9c-3028c47bc8b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06505151325479806, 0.04320931361045458, 0.04030138982839337, 0.1301033400196666, 0.6346007773114765]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([ 2.5 / (np.log(10) * gal_data['dered_flux_'+b] * \n",
+    "                        np.sqrt(gal_data['flux_ivar_'+b])) for b in bands])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4b646da5-0a94-480c-b5e2-5577bc22e241",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object found: 9906621743042266\n",
+      "Redshift: 0.698765\n"
+     ]
+    }
+   ],
+   "source": [
+    "h5_file = \"/global/cscratch1/sd/eramey16/data/dr9_training/unlensed_02_23/9906621743042266.h5\"\n",
+    "gal_data = classify.merge_prospector(tbldata, h5_file=h5_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eb7bf476-5e1d-428d-a599-16cb1fd5de80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mfile = \"/global/homes/e/eramey16/galactic_lenses/gridsearch_models/gridsearch_2023-02-15.sav\"\n",
+    "pred = classify.predict(gal_data, model_file=mfile)\n",
+    "gal_data['lensed'] = pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "198d03ac-fbcb-414d-bde8-947d2aace43e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first done\n"
+     ]
+    }
+   ],
+   "source": [
+    "classify.update_db(bkdata, gal_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "380f91c2-b3bd-442c-a887-406416068406",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = sqlalchemy.create_engine(util.conn_string)\n",
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dcadf568-adf5-407e-87f2-7089f0b7801d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9906621743042266, 162.910029571106, 0.81542817820044, 'REX', 23.42378, 22.469233, 21.555038, 20.804296, 21.673061, 0.427059, 1.028744, 2.387727, 4.767399, 2.141782, 14.504388, 22.860104, 25.552435, 8.278383, 1.702473, 1527.4186, 596.59454, 127.30318, 3.064141, 0.638112, 1297.0767, 1389.1155, 1384.5988, 1395.198, 0.0, 0.982051, 0.876592, 1.034885, 0.561166, 0.506167, 1.0, 0.0, 1.39972, 1.306459, 1.392947, 0.364783, 0.0, 0.0, 1755.2955, 0.0, 0.0, 0.698765, 0.079279, -99.0, 4.27059119198179e-10, 1.02874277944854e-09, 2.38772771266793e-09, 4.76740008625971e-09, 2.14178365534728e-09, 2.63691629192768e-11, 4.17667199258915e-11, 9.02954181568338e-11, 6.06912664544251e-10, 1.70073434754316e-09, 4.56131768358815e-10, 9.68571501943363e-10, 2.43840683243489e-09, 4.5565034617454e-09, 2.97225793854728e-09, 0.570826260065676, 0.222393715374206, 10.1173792169235, -0.0237380588507266, -0.936602424868841, 0.185024294190844, 0.096018752583561, 0.0660736808940854, 0.206412383037788, 0.166462641587396, 0.141212826110965, 0.337451603984334, 0.079100729340734, 0.0847818929862605, 0.25369679818077, 0.991309548240992, False, 1)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"SELECT * from cosmos_160 where ls_id=9906621743042266\").first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "75f9399b-551b-4e6a-8e1c-329e065b1415",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1, 'cosmos_160', 9906621743042266, datetime.datetime(2023, 3, 7, 0, 13, 7, 456273), 2, 'run2')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.execute(\"SELECT * from bookkeeping where id=1\").first()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca3368f-221b-4492-bdf6-aeede3261e20",
+   "id": "6fba1854-d473-4e5e-aeb8-c4056de34917",
    "metadata": {},
    "outputs": [],
    "source": []
