Random pandas issue

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -392,20 +392,7 @@
    "execution_count": 2,
    "id": "4ac72d9f-97d5-4fcf-992c-c824080a8991",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Stage is wrong for galaxy 9906621743042266",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m bkdata, tbldata \u001b[38;5;241m=\u001b[39m \u001b[43mclassify\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_galaxy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mls_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m9906621743042266\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m gal_data \u001b[38;5;241m=\u001b[39m tbldata\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n",
-      "File \u001b[0;32m/global/cscratch1/sd/eramey16/galactic_lenses/docker/classify.py:131\u001b[0m, in \u001b[0;36mget_galaxy\u001b[0;34m(ls_id, tag, engine)\u001b[0m\n\u001b[1;32m    129\u001b[0m gal_meta \u001b[38;5;241m=\u001b[39m bkdata\u001b[38;5;241m.\u001b[39miloc[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m    130\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m gal_meta\u001b[38;5;241m.\u001b[39mstage \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m--> 131\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStage is wrong for galaxy \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mls_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    133\u001b[0m tbldata \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[1;32m    134\u001b[0m     conn\u001b[38;5;241m.\u001b[39mexecute(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSELECT * FROM \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgal_meta\u001b[38;5;241m.\u001b[39mtbl_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m WHERE id=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgal_meta\u001b[38;5;241m.\u001b[39mtbl_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m    136\u001b[0m conn\u001b[38;5;241m.\u001b[39mclose()\n",
-      "\u001b[0;31mValueError\u001b[0m: Stage is wrong for galaxy 9906621743042266"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bkdata, tbldata = classify.get_galaxy(ls_id=9906621743042266)\n",
     "gal_data = tbldata.iloc[0]"
@@ -528,7 +515,7 @@
     }
    ],
    "source": [
-    "classify.update_db(bkdata, gal_data)"
+    "# classify.update_db(bkdata, gal_data)"
    ]
   },
   {
