Weird pandas error

--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -392,7 +392,38 @@
    "execution_count": 2,
    "id": "4ac72d9f-97d5-4fcf-992c-c824080a8991",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id                                   1\n",
+      "tbl_id                               1\n",
+      "tbl_name                    cosmos_160\n",
+      "ls_id                 9906621743042266\n",
+      "created     2023-03-07 22:20:19.058976\n",
+      "stage                                1\n",
+      "tag                               run2\n",
+      "Name: 0, dtype: object\n",
+      "              ls_id         ra       dec type  dered_mag_g  dered_mag_r  \\\n",
+      "0  9906621743042266  162.91003  0.815428  REX     23.42378    22.469233   \n",
+      "\n",
+      "   dered_mag_z  dered_mag_w1  dered_mag_w2  dered_flux_g  ...  \\\n",
+      "0    21.555038     20.804296     21.673061      0.427059  ...   \n",
+      "\n",
+      "   massmet_2_sig_minus  logtmax_sig_minus  dust2_sig_plus  tau_sig_plus  \\\n",
+      "0                 None               None            None          None   \n",
+      "\n",
+      "   massmet_1_sig_plus  massmet_2_sig_plus  logtmax_sig_plus  chisq_maggies  \\\n",
+      "0                None                None              None           None   \n",
+      "\n",
+      "   lensed  id  \n",
+      "0    None   1  \n",
+      "\n",
+      "[1 rows x 81 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "bkdata, tbldata = classify.get_galaxy(ls_id=9906621743042266)\n",
     "gal_data = tbldata.iloc[0]"
@@ -503,24 +534,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "198d03ac-fbcb-414d-bde8-947d2aace43e",
+   "id": "6c4bce15-3232-41e0-9bfb-0ff19001b2b2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "first done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# classify.update_db(bkdata, gal_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "380f91c2-b3bd-442c-a887-406416068406",
    "metadata": {},
    "outputs": [],
@@ -531,23 +554,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "dcadf568-adf5-407e-87f2-7089f0b7801d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = conn.execute(\"SELECT * from cosmos_160 where ls_id=9906621743042266\").keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b4bb99af-ac05-46bf-91e8-74c80a06a990",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9906621743042266, 162.910029571106, 0.81542817820044, 'REX', 23.42378, 22.469233, 21.555038, 20.804296, 21.673061, 0.427059, 1.028744, 2.387727, 4.767399, 2.141782, 14.504388, 22.860104, 25.552435, 8.278383, 1.702473, 1527.4186, 596.59454, 127.30318, 3.064141, 0.638112, 1297.0767, 1389.1155, 1384.5988, 1395.198, 0.0, 0.982051, 0.876592, 1.034885, 0.561166, 0.506167, 1.0, 0.0, 1.39972, 1.306459, 1.392947, 0.364783, 0.0, 0.0, 1755.2955, 0.0, 0.0, 0.698765, 0.079279, -99.0, 4.27059119198179e-10, 1.02874277944854e-09, 2.38772771266793e-09, 4.76740008625971e-09, 2.14178365534728e-09, 2.63691629192768e-11, 4.17667199258915e-11, 9.02954181568338e-11, 6.06912664544251e-10, 1.70073434754316e-09, 4.56131768358815e-10, 9.68571501943363e-10, 2.43840683243489e-09, 4.5565034617454e-09, 2.97225793854728e-09, 0.570826260065676, 0.222393715374206, 10.1173792169235, -0.0237380588507266, -0.936602424868841, 0.185024294190844, 0.096018752583561, 0.0660736808940854, 0.206412383037788, 0.166462641587396, 0.141212826110965, 0.337451603984334, 0.079100729340734, 0.0847818929862605, 0.25369679818077, 0.991309548240992, False, 1)"
+       "['ls_id',\n",
+       " 'ra',\n",
+       " 'dec',\n",
+       " 'type',\n",
+       " 'dered_mag_g',\n",
+       " 'dered_mag_r',\n",
+       " 'dered_mag_z',\n",
+       " 'dered_mag_w1',\n",
+       " 'dered_mag_w2',\n",
+       " 'dered_flux_g',\n",
+       " 'dered_flux_r',\n",
+       " 'dered_flux_z',\n",
+       " 'dered_flux_w1',\n",
+       " 'dered_flux_w2',\n",
+       " 'snr_g',\n",
+       " 'snr_r',\n",
+       " 'snr_z',\n",
+       " 'snr_w1',\n",
+       " 'snr_w2',\n",
+       " 'flux_ivar_g',\n",
+       " 'flux_ivar_r',\n",
+       " 'flux_ivar_z',\n",
+       " 'flux_ivar_w1',\n",
+       " 'flux_ivar_w2',\n",
+       " 'dchisq_1',\n",
+       " 'dchisq_2',\n",
+       " 'dchisq_3',\n",
+       " 'dchisq_4',\n",
+       " 'dchisq_5',\n",
+       " 'rchisq_g',\n",
+       " 'rchisq_r',\n",
+       " 'rchisq_z',\n",
+       " 'rchisq_w1',\n",
+       " 'rchisq_w2',\n",
+       " 'sersic',\n",
+       " 'sersic_ivar',\n",
+       " 'psfsize_g',\n",
+       " 'psfsize_r',\n",
+       " 'psfsize_z',\n",
+       " 'shape_r',\n",
+       " 'shape_e1',\n",
+       " 'shape_e2',\n",
+       " 'shape_r_ivar',\n",
+       " 'shape_e1_ivar',\n",
+       " 'shape_e2_ivar',\n",
+       " 'z_phot_median',\n",
+       " 'z_phot_std',\n",
+       " 'z_spec',\n",
+       " 'maggies_0',\n",
+       " 'maggies_1',\n",
+       " 'maggies_2',\n",
+       " 'maggies_3',\n",
+       " 'maggies_4',\n",
+       " 'maggies_unc_0',\n",
+       " 'maggies_unc_1',\n",
+       " 'maggies_unc_2',\n",
+       " 'maggies_unc_3',\n",
+       " 'maggies_unc_4',\n",
+       " 'maggies_fit_0',\n",
+       " 'maggies_fit_1',\n",
+       " 'maggies_fit_2',\n",
+       " 'maggies_fit_3',\n",
+       " 'maggies_fit_4',\n",
+       " 'dust2_med',\n",
+       " 'tau_med',\n",
+       " 'massmet_1_med',\n",
+       " 'massmet_2_med',\n",
+       " 'logtmax_med',\n",
+       " 'dust2_sig_minus',\n",
+       " 'tau_sig_minus',\n",
+       " 'massmet_1_sig_minus',\n",
+       " 'massmet_2_sig_minus',\n",
+       " 'logtmax_sig_minus',\n",
+       " 'dust2_sig_plus',\n",
+       " 'tau_sig_plus',\n",
+       " 'massmet_1_sig_plus',\n",
+       " 'massmet_2_sig_plus',\n",
+       " 'logtmax_sig_plus',\n",
+       " 'chisq_maggies',\n",
+       " 'lensed',\n",
+       " 'id']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "conn.execute(\"SELECT * from cosmos_160 where ls_id=9906621743042266\").first()"
+    "list(test)"
    ]
   },
   {
@@ -568,13 +681,35 @@
     }
    ],
    "source": [
-    "conn.execute(\"SELECT * from bookkeeping where id=1\").first()"
+    "conn.execute(\"SELECT * from bookkeeping where id=1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6fba1854-d473-4e5e-aeb8-c4056de34917",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.32'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sqlalchemy\n",
+    "sqlalchemy.__version__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fba1854-d473-4e5e-aeb8-c4056de34917",
+   "id": "d1e63482-53c6-45db-8901-d324cb584434",
    "metadata": {},
    "outputs": [],
    "source": []
