--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -708,8 +708,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d1e63482-53c6-45db-8901-d324cb584434",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.2'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "pandas.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7038270-017f-4d97-ac99-1224291a0605",
    "metadata": {},
    "outputs": [],
    "source": []
