--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1555169bfc10>]"
+       "[<matplotlib.lines.Line2D at 0x1555169c8490>]"
       ]
      },
      "execution_count": 2,
@@ -132,7 +132,7 @@
     "engine = create_engine(conn_string)\n",
     "conn = engine.connect()\n",
     "\n",
-    "util.bookkeeping_setup(conn, 'cosmos_160', clean_galaxies, tag='run2')"
+    "# util.bookkeeping_setup(conn, 'cosmos_160', clean_galaxies, tag='run2')"
    ]
   },
   {
@@ -174,16 +174,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>cosmos_160</td>\n",
-       "      <td>9906621743042266</td>\n",
-       "      <td>2023-03-07 22:20:19.058976</td>\n",
-       "      <td>1</td>\n",
-       "      <td>run2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -193,7 +183,7 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -203,7 +193,7 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -213,12 +203,22 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
        "      <td>cosmos_160</td>\n",
        "      <td>9906621647291909</td>\n",
        "      <td>2023-03-07 22:20:19.096316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906620893300446</td>\n",
+       "      <td>2023-03-07 22:20:19.101779</td>\n",
        "      <td>1</td>\n",
        "      <td>run2</td>\n",
        "    </tr>\n",
@@ -234,16 +234,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9995</th>\n",
-       "      <td>9996</td>\n",
-       "      <td>9996</td>\n",
-       "      <td>cosmos_160</td>\n",
-       "      <td>9906622309140574</td>\n",
-       "      <td>2023-03-07 22:21:44.205694</td>\n",
-       "      <td>1</td>\n",
-       "      <td>run2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
        "      <td>9997</td>\n",
        "      <td>9997</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -253,7 +243,7 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9997</th>\n",
+       "      <th>9996</th>\n",
        "      <td>9998</td>\n",
        "      <td>9998</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -263,7 +253,7 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9998</th>\n",
+       "      <th>9997</th>\n",
        "      <td>9999</td>\n",
        "      <td>9999</td>\n",
        "      <td>cosmos_160</td>\n",
@@ -273,13 +263,23 @@
        "      <td>run2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9999</th>\n",
+       "      <th>9998</th>\n",
        "      <td>10000</td>\n",
        "      <td>10000</td>\n",
        "      <td>cosmos_160</td>\n",
        "      <td>9906620704886771</td>\n",
        "      <td>2023-03-07 22:21:44.232564</td>\n",
        "      <td>1</td>\n",
+       "      <td>run2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>cosmos_160</td>\n",
+       "      <td>9906621743042266</td>\n",
+       "      <td>2023-03-07 22:20:19.058976</td>\n",
+       "      <td>2</td>\n",
        "      <td>run2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -289,17 +289,17 @@
       ],
       "text/plain": [
        "         id  tbl_id    tbl_name             ls_id                    created  \\\n",
-       "0         1       1  cosmos_160  9906621743042266 2023-03-07 22:20:19.058976   \n",
-       "1         2       2  cosmos_160  9906621271050433 2023-03-07 22:20:19.077879   \n",
-       "2         3       3  cosmos_160  9906621648077981 2023-03-07 22:20:19.083887   \n",
-       "3         4       4  cosmos_160  9906621929816416 2023-03-07 22:20:19.091293   \n",
-       "4         5       5  cosmos_160  9906621647291909 2023-03-07 22:20:19.096316   \n",
+       "0         2       2  cosmos_160  9906621271050433 2023-03-07 22:20:19.077879   \n",
+       "1         3       3  cosmos_160  9906621648077981 2023-03-07 22:20:19.083887   \n",
+       "2         4       4  cosmos_160  9906621929816416 2023-03-07 22:20:19.091293   \n",
+       "3         5       5  cosmos_160  9906621647291909 2023-03-07 22:20:19.096316   \n",
+       "4         6       6  cosmos_160  9906620893300446 2023-03-07 22:20:19.101779   \n",
        "...     ...     ...         ...               ...                        ...   \n",
-       "9995   9996    9996  cosmos_160  9906622309140574 2023-03-07 22:21:44.205694   \n",
-       "9996   9997    9997  cosmos_160  9906621460125395 2023-03-07 22:21:44.211451   \n",
-       "9997   9998    9998  cosmos_160  9906623439438358 2023-03-07 22:21:44.219393   \n",
-       "9998   9999    9999  cosmos_160  9906622213654027 2023-03-07 22:21:44.225291   \n",
-       "9999  10000   10000  cosmos_160  9906620704886771 2023-03-07 22:21:44.232564   \n",
+       "9995   9997    9997  cosmos_160  9906621460125395 2023-03-07 22:21:44.211451   \n",
+       "9996   9998    9998  cosmos_160  9906623439438358 2023-03-07 22:21:44.219393   \n",
+       "9997   9999    9999  cosmos_160  9906622213654027 2023-03-07 22:21:44.225291   \n",
+       "9998  10000   10000  cosmos_160  9906620704886771 2023-03-07 22:21:44.232564   \n",
+       "9999      1       1  cosmos_160  9906621743042266 2023-03-07 22:20:19.058976   \n",
        "\n",
        "      stage   tag  \n",
        "0         1  run2  \n",
@@ -312,7 +312,7 @@
        "9996      1  run2  \n",
        "9997      1  run2  \n",
        "9998      1  run2  \n",
-       "9999      1  run2  \n",
+       "9999      2  run2  \n",
        "\n",
        "[10000 rows x 7 columns]"
       ]
