--- a/Test_ML.ipynb
+++ b/Test_ML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "46c737c3-12e1-4431-b3af-bfb249c26fab",
+   "id": "4f534958",
    "metadata": {},
    "source": [
     "# New ML Run 2/27/23"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6932aaa6-cf9c-43e1-b541-ac9298d3bf24",
+   "id": "d1f3c2a6",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4690b5c-9671-48c1-9df2-6e896b9f673b",
+   "id": "7582fdf5",
    "metadata": {},
    "source": [
     "##### Downloaded galaxies from 6 degrees around RA 160 DEC 2\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1196d202-df1e-449a-85a2-624bb40f4b90",
+   "id": "f0f87283",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f6a168e7-a95b-437d-bd11-4993a5e0a7b6",
+   "id": "4a20a1b0",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e1b862e-e12a-40ab-afc3-0363680e920e",
+   "id": "2f287fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fff6a75e-a593-4790-a2fb-5606326ce22d",
+   "id": "3582bbc2",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7a00d31b-4918-4dae-88af-3cee963c7a67",
+   "id": "17d09814",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0447823b-159f-47c4-9187-a22c632024ca",
+   "id": "4f595f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19a08348-c19b-443c-ac60-3df4bfa49500",
+   "id": "af520192",
    "metadata": {},
    "source": [
     "### Running classify"
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aca3368f-221b-4492-bdf6-aeede3261e20",
+   "id": "4ed18213",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ac72d9f-97d5-4fcf-992c-c824080a8991",
+   "id": "9bddb04b",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1cd11fbd-f14b-4523-8c63-887f1c3a00d3",
+   "id": "7712f969",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c430653d-5f92-417f-845b-eeb592515658",
+   "id": "73fab49f",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bdc01e74-0a86-4746-bc66-6cc9c59815a5",
+   "id": "f72be90a",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0567364d-3a42-46d6-9a9c-3028c47bc8b7",
+   "id": "11963cf2",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b646da5-0a94-480c-b5e2-5577bc22e241",
+   "id": "7f3d2e3e",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eb7bf476-5e1d-428d-a599-16cb1fd5de80",
+   "id": "dc36c4b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6c4bce15-3232-41e0-9bfb-0ff19001b2b2",
+   "id": "4c235b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "380f91c2-b3bd-442c-a887-406416068406",
+   "id": "3650459a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "dcadf568-adf5-407e-87f2-7089f0b7801d",
+   "id": "11c3a3b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b4bb99af-ac05-46bf-91e8-74c80a06a990",
+   "id": "a68af771",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "75f9399b-551b-4e6a-8e1c-329e065b1415",
+   "id": "848d6f48",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6fba1854-d473-4e5e-aeb8-c4056de34917",
+   "id": "07342ce7",
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d1e63482-53c6-45db-8901-d324cb584434",
+   "id": "a749e71f",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7038270-017f-4d97-ac99-1224291a0605",
+   "id": "11355744",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -739,9 +739,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Prospector",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myprospector"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
