--- a/Gaia calibration.ipynb
+++ b/Gaia calibration.ipynb
@@ -261,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NERSC Python",
    "language": "python",
    "name": "python3"
   },
@@ -275,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
