Fixed theta labels

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -600,6 +600,41 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "593b9fab-c667-4f5b-a739-3ac6ef9ecf1c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "res, obs, model = reader.results_from('/pscratch/sd/e/eramey16/data/monocle/test/10995435681361334.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bacbc976-55d8-4c02-a498-ad74af218f16",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['zred', 'dust2', 'tau', 'tmax', 'massmet_1', 'massmet_2']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res['theta_labels']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "ef8f5318-e54a-4e5f-9df7-24f9670b373e",
    "metadata": {
     "tags": []
@@ -2006,7 +2041,7 @@
     "for i,gal in gal10.iterrows():\n",
     "    print(f\"mpirun -n 50 python param_monocle.py --mag_in=\\\"{list(gal[['dered_mag_'+b for b in bands]])}\\\" \" \\\n",
     "          f\"--mag_unc_in=\\\"{list(2.5 / np.log(10) / np.array([gal['snr_'+b] for b in bands]))}\\\" \" \\\n",
-    "          f\"--object_redshift={gal['z_phot_median']} --outfile=test_data/unlensed_param_1{i}\")"
+    "          f\" --outfile=test_data/unlensed_param_1{i}\")"
    ]
   },
   {
