Fixed something in util

--- a/DR10.ipynb
+++ b/DR10.ipynb
@@ -13,21 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "8b1eb10a-005b-42fd-b0b6-5f42f070fdca",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -530,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "af912477-ef0b-48a4-b3aa-8cbb27b420e0",
    "metadata": {},
    "outputs": [],
@@ -543,16 +534,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "id": "75b6d160-c701-4f58-a35b-65e1347954bb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Column('ls_id', BIGINT(), table=None, nullable=False),\n",
+       " Column('ra', FLOAT(), table=None),\n",
+       " Column('dec', FLOAT(), table=None),\n",
+       " Column('type', VARCHAR(length=4), table=None),\n",
+       " Column('dered_mag_g', FLOAT(), table=None),\n",
+       " Column('dered_mag_r', FLOAT(), table=None),\n",
+       " Column('dered_mag_i', FLOAT(), table=None),\n",
+       " Column('dered_mag_z', FLOAT(), table=None),\n",
+       " Column('dered_mag_w1', FLOAT(), table=None),\n",
+       " Column('dered_mag_w2', FLOAT(), table=None),\n",
+       " Column('dered_flux_g', FLOAT(), table=None),\n",
+       " Column('dered_flux_r', FLOAT(), table=None),\n",
+       " Column('dered_flux_i', FLOAT(), table=None),\n",
+       " Column('dered_flux_z', FLOAT(), table=None),\n",
+       " Column('dered_flux_w1', FLOAT(), table=None),\n",
+       " Column('dered_flux_w2', FLOAT(), table=None),\n",
+       " Column('g_r', FLOAT(), table=None),\n",
+       " Column('i_z', FLOAT(), table=None),\n",
+       " Column('r_i', FLOAT(), table=None),\n",
+       " Column('r_z', FLOAT(), table=None),\n",
+       " Column('w1_w2', FLOAT(), table=None),\n",
+       " Column('z_w1', FLOAT(), table=None),\n",
+       " Column('snr_g', FLOAT(), table=None),\n",
+       " Column('snr_r', FLOAT(), table=None),\n",
+       " Column('snr_i', FLOAT(), table=None),\n",
+       " Column('snr_z', FLOAT(), table=None),\n",
+       " Column('snr_w1', FLOAT(), table=None),\n",
+       " Column('snr_w2', FLOAT(), table=None),\n",
+       " Column('flux_ivar_g', FLOAT(), table=None),\n",
+       " Column('flux_ivar_r', FLOAT(), table=None),\n",
+       " Column('flux_ivar_i', FLOAT(), table=None),\n",
+       " Column('flux_ivar_z', FLOAT(), table=None),\n",
+       " Column('flux_ivar_w1', FLOAT(), table=None),\n",
+       " Column('flux_ivar_w2', FLOAT(), table=None),\n",
+       " Column('dchisq_1', FLOAT(), table=None),\n",
+       " Column('dchisq_2', FLOAT(), table=None),\n",
+       " Column('dchisq_3', FLOAT(), table=None),\n",
+       " Column('dchisq_4', FLOAT(), table=None),\n",
+       " Column('dchisq_5', FLOAT(), table=None),\n",
+       " Column('rchisq_g', FLOAT(), table=None),\n",
+       " Column('rchisq_r', FLOAT(), table=None),\n",
+       " Column('rchisq_i', FLOAT(), table=None),\n",
+       " Column('rchisq_z', FLOAT(), table=None),\n",
+       " Column('rchisq_w1', FLOAT(), table=None),\n",
+       " Column('rchisq_w2', FLOAT(), table=None),\n",
+       " Column('sersic', FLOAT(), table=None),\n",
+       " Column('sersic_ivar', FLOAT(), table=None),\n",
+       " Column('psfsize_g', FLOAT(), table=None),\n",
+       " Column('psfsize_r', FLOAT(), table=None),\n",
+       " Column('psfsize_z', FLOAT(), table=None),\n",
+       " Column('shape_r', FLOAT(), table=None),\n",
+       " Column('shape_e1', FLOAT(), table=None),\n",
+       " Column('shape_e2', FLOAT(), table=None),\n",
+       " Column('shape_r_ivar', FLOAT(), table=None),\n",
+       " Column('shape_e1_ivar', FLOAT(), table=None),\n",
+       " Column('shape_e2_ivar', FLOAT(), table=None),\n",
+       " Column('z_phot_median', FLOAT(), table=None),\n",
+       " Column('z_phot_std', FLOAT(), table=None),\n",
+       " Column('z_spec', FLOAT(), table=None),\n",
+       " Column('maggies_0', FLOAT(), table=None),\n",
+       " Column('maggies_1', FLOAT(), table=None),\n",
+       " Column('maggies_2', FLOAT(), table=None),\n",
+       " Column('maggies_3', FLOAT(), table=None),\n",
+       " Column('maggies_4', FLOAT(), table=None),\n",
+       " Column('maggies_unc_0', FLOAT(), table=None),\n",
+       " Column('maggies_unc_1', FLOAT(), table=None),\n",
+       " Column('maggies_unc_2', FLOAT(), table=None),\n",
+       " Column('maggies_unc_3', FLOAT(), table=None),\n",
+       " Column('maggies_unc_4', FLOAT(), table=None),\n",
+       " Column('maggies_fit_0', FLOAT(), table=None),\n",
+       " Column('maggies_fit_1', FLOAT(), table=None),\n",
+       " Column('maggies_fit_2', FLOAT(), table=None),\n",
+       " Column('maggies_fit_3', FLOAT(), table=None),\n",
+       " Column('maggies_fit_4', FLOAT(), table=None),\n",
+       " Column('zred_med', FLOAT(), table=None),\n",
+       " Column('dust2_med', FLOAT(), table=None),\n",
+       " Column('tau_med', FLOAT(), table=None),\n",
+       " Column('tmax_med', FLOAT(), table=None),\n",
+       " Column('massmet_1_med', FLOAT(), table=None),\n",
+       " Column('massmet_2_med', FLOAT(), table=None),\n",
+       " Column('zred_sig_minus', FLOAT(), table=None),\n",
+       " Column('dust2_sig_minus', FLOAT(), table=None),\n",
+       " Column('tau_sig_minus', FLOAT(), table=None),\n",
+       " Column('tmax_sig_minus', FLOAT(), table=None),\n",
+       " Column('massmet_1_sig_minus', FLOAT(), table=None),\n",
+       " Column('massmet_2_sig_minus', FLOAT(), table=None),\n",
+       " Column('zred_sig_plus', FLOAT(), table=None),\n",
+       " Column('dust2_sig_plus', FLOAT(), table=None),\n",
+       " Column('tau_sig_plus', FLOAT(), table=None),\n",
+       " Column('tmax_sig_plus', FLOAT(), table=None),\n",
+       " Column('massmet_1_sig_plus', FLOAT(), table=None),\n",
+       " Column('massmet_2_sig_plus', FLOAT(), table=None),\n",
+       " Column('chisq_maggies', FLOAT(), table=None),\n",
+       " Column('lensed', BOOLEAN(), table=None),\n",
+       " Column('id', BIGINT(), table=None, primary_key=True, nullable=False),\n",
+       " Column('lens_grade', VARCHAR(length=1), table=None)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "util.db_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "7ae522c7-4155-41f8-896e-41c2a5e50a81",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "engine = create_engine(util.conn_string)\n",
-    "util.bookkeeping_setup('dr10_training', data=clean_lensed, train=True,\n",
-    "                       tag='lensed_original', engine=engine)"
+    "# engine = create_engine(util.conn_string)\n",
+    "# util.bookkeeping_setup('dr10_training', data=clean_lensed, train=True,\n",
+    "#                        tag='lensed_original', engine=engine)"
    ]
   },
   {
